fix: nav and div change to teg link a

--- a/app/sass/blocks/nav.scss
+++ b/app/sass/blocks/nav.scss
@@ -20,6 +20,7 @@
 
   @media(min-width: $desktop) {
     flex-direction: row;
+    flex-wrap: wrap;
     //align-items: center;
     //margin-bottom: 0;
   }
