--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -23,6 +23,8 @@
 @import "blocks/uk-box.scss";
 @import "blocks/win-none.scss";
 @import "blocks/show-window.scss";
+@import "blocks/move.scss";
+
 
 
 
