--- a/app/sass/blocks/nav.scss
+++ b/app/sass/blocks/nav.scss
@@ -204,9 +204,9 @@ margin-right: 20px;
   position: relative;
 }
 
-//.nav__inner_2_2  .nav__inner_2_2_ul_small{
-//  display: none;
-//}
+.nav__inner_2_2_ul_small{
+  display: block;
+}
 
 .nav__inner_2_4 li {
   display: flex;
